--- a/templates/sections/footer.html
+++ b/templates/sections/footer.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+<head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}" type="text/css">
+</head>
 <!-- Footer -->
-<footer class="footer pt-4 fixed-bottom">
+<footer class="foot pt-4 fixed-bottom">
 
   <!-- Footer Elements -->
   <div class="container footer">
@@ -41,3 +44,6 @@
 <link rel="stylesheet" href="">
 </footer>
 <!-- Footer -->
+
+<!--Link for custom CSS sheet-->
+    <link rel="stylesheet" src="{{ url_for('static', filename='css/footer.css') }}" type="text/css">
