tried to link up css file - unsuccessly

--- a/templates/sections/footer.html
+++ b/templates/sections/footer.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}" type="text/css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
 </head>
 <!-- Footer -->
 <footer class="foot pt-4 fixed-bottom">
 
   <!-- Footer Elements -->
-  <div class="container footer">
+  <div class="container foot">
 
     <!-- Social buttons -->
     <ul class="list-unstyled list-inline text-center">
@@ -46,4 +46,4 @@
 <!-- Footer -->
 
 <!--Link for custom CSS sheet-->
-    <link rel="stylesheet" src="{{ url_for('static', filename='css/footer.css') }}" type="text/css">
+   
