--- a/templates/main.html
+++ b/templates/main.html
@@ -1,8 +1,80 @@
 <!DOCTYPE html>
+<head>
+
+
+<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+</head>
 {% extends 'base.html' %}
 {% block content %}
 
-<h3>Main Page</h3>
+<div class="container page">
+    <div class="caro">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+            <img class="d-block w-80" src="{{ url_for('static', filename='images/unnamed.jpg') }}" alt="First slide">
+            </div>
+            <div class="carousel-item">
+            <img class="d-block w-80" src="{{ url_for('static', filename='images/review.png') }}" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+            <img class="d-block w-80" src="{{ url_for('static', filename='images/unnamed.jpg') }}" alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+        </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+            </a>
+        </div>
+       
+ 
 
 
+<!-- Content Section -->
+
+<!-- Welcome Area -->
+<div class="container para">
+    <div class="row">
+        <h3 class="para-title">
+            Welcome to Book Shelf
+        </h3>
+        <hr>
+        <p class="para-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat quam, faucibus non lorem maximus, mollis varius tortor. Suspendisse vitae augue vel elit rhoncus consequat. Duis feugiat lacus at risus malesuada pellentesque. Pellentesque enim tellus, semper placerat turpis et, lobortis maximus tellus. Duis eget velit et sem auctor vehicula. Donec viverra magna urna, ac accumsan arcu volutpat nec. Donec et blandit purus.
+        </p>
+    </div>
+</div>
+
+<!-- Category Selection -->
+<div class="container para">
+    <div class="row">   
+        <h3 class="para-title">
+
+        </h3>
+        <hr>
+    </div>
+</div>
+
+
+</div>
  {% endblock %}
