--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,8 @@
     <!--Link for custom CSS sheet-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}" type="text/css">
 
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+
 
     <!-- JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
