--- a/templates/sections/footer.html
+++ b/templates/sections/footer.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
 </head>
 <!-- Footer -->
-<footer class="foot pt-4 fixed-bottom">
+<footer class="foot pt-4 ">
 
   <!-- Footer Elements -->
   <div class="container foot">
@@ -12,22 +12,22 @@
     <ul class="list-unstyled list-inline text-center">
       <li class="list-inline-item">
         <a class="mx-4" href="#">
-          <i class="fa fa-github fa-2x"> </i>
+          <i class="fa fa-github fa-3x icons"> </i>
         </a>
       </li>
       <li class="list-inline-item">
         <a class="mx-4" href="#">
-          <i class="fa fa-twitter fa-2x"> </i>
+          <i class="fa fa-twitter fa-3x icons"> </i>
         </a>
       </li>
       <li class="list-inline-item">
         <a class="mx-4" href="#">
-          <i class="fa fa-linkedin-square fa-2x"> </i>
+          <i class="fa fa-linkedin-square fa-3x icons"> </i>
         </a>
       </li>
       <li class="list-inline-item">
-        <a class="mx-4" href="#">
-          <i class="fa fa-slack fa-2x"> </i>
+        <a class="mx-4 view overlay zoom" href="#">
+          <i class="fa fa-slack  fa-3x icons"> </i>
         </a>
       </li>
     </ul>
@@ -40,10 +40,7 @@
   <div class="footer-copyright text-center py-3">© 2020 Copyright:
     <a href="#"> Pysched</a>
   </div>
-  <!-- Styles Footer -->
-<link rel="stylesheet" href="">
-</footer>
+ 
 <!-- Footer -->
 
-<!--Link for custom CSS sheet-->
    
