--- a/templates/sections/nav.html
+++ b/templates/sections/nav.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"><img src="" />BS</a>
+
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="{{ url_for('main') }}"><img src="" />BS</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -15,12 +17,24 @@
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('browse') }}">Browse Categories</a>
       </li>
+      {% if session.user %}
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('profile', username=session['user']) }}">Account</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('add_item') }}">Add listing</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+      </li>
+      {% else %}
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('login') }}">Login</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('register') }}">Register</a>
       </li>
+      {% endif %}
     </ul>
   </div>
 </nav>
