--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
 
     <!-- JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -31,7 +33,20 @@
 {% include "sections/nav.html" %}
 </header>
 
-
+<div id="alerts" class="container-fluid">
+				<div class="row justify-content-around">
+					<div id="messages">
+						{% with messages = get_flashed_messages() %}
+						{% if messages %}
+						{% for message in messages %}
+						<p class="text-center">{{ message }}</p>
+						{% endfor %}
+						{% endif %}
+						{% endwith %}
+					</div>
+				</div>
+			</div>
+		</nav>	
 
 <!-- Main Content -->   
 
@@ -43,7 +58,8 @@
 {% include "sections/footer.html" %}
 
 
-
+<!-- JS -->
+		<script src="{{ url_for('static', filename='js/main.js') }}"></script>
 
 <!-- scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
