--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="container page">
+<div class="container carousel">
+<div class="row text-center carousel">
     <div class="caro">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -15,12 +16,12 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
-        <div class="carousel-inner">
+        <div class="carousel-inner text-center">
             <div class="carousel-item active">
             <img class="d-block w-80" src="{{ url_for('static', filename='images/unnamed.jpg') }}" alt="First slide">
             </div>
             <div class="carousel-item">
-            <img class="d-block w-80" src="{{ url_for('static', filename='images/review.png') }}" alt="Second slide">
+            <img class="d-block w-80" src="{{ url_for('static', filename='images/unnamed.jpg') }}" alt="Second slide">
             </div>
             <div class="carousel-item">
             <img class="d-block w-80" src="{{ url_for('static', filename='images/unnamed.jpg') }}" alt="Third slide">
@@ -46,19 +47,26 @@
             <span class="sr-only">Next</span>
             </a>
         </div>
-       
- 
+       </div>
+ </div>
 
 
 <!-- Content Section -->
 
+
+<!--WELCOME MESSAGE-->
+    <div class="col s12">
+        <h1 class="page-title">Welcome{% if session.user %}, {{ session['user']|capitalize }}{% endif %}!</h1>
+    </div>
+
+    
 <!-- Welcome Area -->
 <div class="container para">
-    <div class="row">
+    
         <h3 class="para-title">
             Welcome to Book Shelf
         </h3>
-        <hr>
+        <hr class="hr-line">
         <p class="para-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam erat quam, faucibus non lorem maximus, mollis varius tortor. Suspendisse vitae augue vel elit rhoncus consequat. Duis feugiat lacus at risus malesuada pellentesque. Pellentesque enim tellus, semper placerat turpis et, lobortis maximus tellus. Duis eget velit et sem auctor vehicula. Donec viverra magna urna, ac accumsan arcu volutpat nec. Donec et blandit purus.
         </p>
@@ -67,7 +75,7 @@
 
 <!-- Category Selection -->
 <div class="container para">
-    <div class="row">   
+      
         <h3 class="para-title">
 
         </h3>
