updated login system logic, continued work in progress

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -29,7 +29,13 @@ margin: auto;
 
 }
 
-/*--HR line --*/
+/*--HR line -- */
 .hr-line{
     background-color:#006168;
+}
+
+/* -- Login -- */
+.login{
+    border:2px solid #006168;
+    padding:1.25rem;
 }
