--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
 
 <div class="container">
 	<div class="row justify-content-center">
-		<form method="POST" action="/login">
+		<form method="POST" action="/user_auth">
 			<div class="form-group">
 				<label for="username">User name</label>
 				<input name="username" type="text" class="form-control" placeholder="User name" required>
@@ -18,7 +18,12 @@
 				<input class="form-control" name="user_password" type="password" placeholder="Password" required>
 			</div>
 			<button type="submit" class="btn btn-primary btn-block">Login</button>
-		</form>
+		
+        <hr class="hr-line">
+        <div class="register-link">
+            <p class="link-text">Don't have an account ? <a href="{{ url_for('register') }}">Sign up here!</a></p>
+        </div>
+</form>
 	</div>
 </div>
 
